# DBscan_on_simtel_data

./: .gitignore  DBscan_on_simtel_data_stereo.py  DBscan_on_simtel_data_stereo.sh  conversion_table_LST.csv  conversion_table_LST_clusters.csv  convolve_dbscan.py  event_dict.yaml  example_tm_ctao.py  generate_simu.py  libGammaFile.py  libGammaStat.py  mono_rates.ipynb  pyproject.toml  setup_folder.sh  test_dbscan_convo_simtel.py
camera_file/: CTA_LST_Pixels_info.csv  CTA_LST_Pixels_info_epsilon_2.csv  CTA_LST_Pixels_info_epsilon_3.csv  CTA_LST_Pixels_info_epsilon_4.csv  CTA_LST_Pixels_info_shrink.csv
old/tm_ctao/: DataCube.py  Frame.py  HECS.py
