[tool.poetry]
name = "cta_dbscan"
version = "0.1.0"  # Note: You should manually set this version based on your current project version or get_version_pypi() logic
description = "dl1 HDF5 data writer + reader + processor"
authors = ["Tanguy Dietrich"]
license = "MIT"
readme = "README.rst"
homepage = "http://github.com/cta-observatory/dl1-data-handler"

[tool.poetry.dependencies]
python = "^3.8"  # Adjust this according to your needs
numpy = ">1.16"
astropy = "*"
ctapipe = "==0.19"
traitlets = ">=5.0"
jupyter = "*"
pandas = "*"
pytest-cov = "*"
tables = ">=3.7"
imageio = "*"
h5py = "*"
quantiphy = "*"

[tool.poetry.scripts]
dl1dh-generate_runlist = "cta_dbscan.generate_runlist:main"
dl1dh-write_data = "cta_dbscan.write_data:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

